--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,10 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.68"
-bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
-  "wayland",
-  "bevy_asset",
-  "bevy_render",
-  "bevy_winit",
-  "filesystem_watcher",
-  "png",
-] }
+bevy = { git = "https://github.com/bevyengine/bevy" }
 bevy_egui = { version = "0.18.0", default-features = false }
-bevy-inspector-egui = "0.15.0"
-bevy-inspector-egui-derive = "0.15.0"
+bevy-inspector-egui = "0.17.0"
+bevy-inspector-egui-derive = "0.17.0"
 egui = { version = "0.20.1", features = ["bytemuck"] }
 encase = "0.4.1"
 log = "0.4.17"
