--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.68"
-bevy = { git = "https://github.com/bevyengine/bevy" }
+bevy = { git = "https://github.com/Elabajaba/bevy", branch = "fix-undefined-MAX_CASCADES_PER_LIGHT" }
 bevy_egui = { version = "0.18.0", default-features = false }
 bevy-inspector-egui = "0.17.0"
 bevy-inspector-egui-derive = "0.17.0"
